--- a/ClaraFrontend/src/app/components/ideas/ideas.component.scss
+++ b/ClaraFrontend/src/app/components/ideas/ideas.component.scss
@@ -25,6 +25,12 @@ p {
 }
 
 .ideas {
-  width: 75%;
+  width: 65%;
+  float: left;
+}
+
+.options {
+  width: 25%;
+  float: right;
 }
 
