--- a/ClaraFrontend/src/app/components/main/main.component.scss
+++ b/ClaraFrontend/src/app/components/main/main.component.scss
@@ -67,7 +67,7 @@
     h3, h5 {
       font-weight: 400;
       font-size: 1.8vh;
-      margin: 0.8vh;
+      height: auto !important;
     }
 
     h5 {
