--- a/ClaraFrontend/src/styles.scss
+++ b/ClaraFrontend/src/styles.scss
@@ -368,9 +368,9 @@ h1 {
   box-sizing: content-box;
   font-weight: 300;
 }
-h1, h2, h3, h4, h5, h6 {
-  height: auto !important;
-  font-weight: 400 !important;
+
+span {
+  color: inherit !important;
 }
 
 p {
